update fix overflow to last discord version

--- a/Fix/Fix-Overflow-User-Profil.theme.css
+++ b/Fix/Fix-Overflow-User-Profil.theme.css
@@ -1,28 +1,1 @@
-/**
- * @name Fx User Info
- * @author Warkis
- * @description Fix the user overflow. By default you get an overflow when to much plugin add information on the user profile, or when you use a specific font
- * @version 1.0.0
- * @authorId 357575063219863553
- * @website https://github.com/warquys
- * @source https://github.com/warquys/Discord-Themes
- */
-
- [role="tablist"] {
-    overflow-y: hidden;
-    border-bottom: 1px solid var(--profile-body-divider-color);
-    margin: 2px 12px 0;
-    padding: 0;
-    scrollbar-width: thin;
-    padding-bottom: 10px;
-}
-
-[role="tablist"]::-webkit-scrollbar {
-    width: 0em;
-    height: 0.4em;
-}
-
-[role="tablist"]::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 1px rgba(0, 0, 0, 0);
-    box-shadow: inset 0 0 2px rgba(0, 0, 0, 0);
-}
+C:/Users/Pc/AppData/Roaming/Vencord/themes/Fix-Overflow-User-Profil.theme.css
